added me into "authors" in composer.json file and into readme.md
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
 		{
 			"name": "David Grudl",
 			"homepage": "http://davidgrudl.com"
+		},
+		{
+			"name": "Jan Pecha",
+			"homepage": "http://janpecha.iunas.cz/"
 		}
 	],
 	"require": {
