composer.json: fixed mistake in file
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "czproject/phpshrink", # EDIT THIS
+	"name": "czproject/phpshrink",
 	"type": "library",
 	"description": "Library for shrinking of PHP code.",
 	"authors": [
